--- a/contact.html
+++ b/contact.html
@@ -18,8 +18,28 @@
         </ul>
     </nav>
 
-    <h1>Welcome to Eagle's nest!</h1>
-    <p>This is a paragraph.</p>
+    <h1>Want to reach me? Here's how!</h1>
+
+    <div class="grid-container">
+        <div class="item1"><img src="images/me.jpg" alt=""></div>
+        <div class="item2">
+
+            <p><a href="https://www.linkedin.com/in/emilie-eagle-jakobsen/" target="_blank">
+                <img class="contact-icon" src="images/linkedin.png">
+            </a></p>
+            <p><a href="https://discordapp.com/users/163655457678819328" target="_blank">
+                <img class="contact-icon" src="images/discord.png">
+            </a></p>
+            <p><a href="https://github.com/emidoescoding" target="_blank">
+                <img class="contact-icon" src="images/github.png">
+            </a></p>
+            <p><a href="https://eagul.dev/" target="_blank">
+                <img class="contact-icon" src="images/website.png">
+            </a></p>
+          
+        </div>
+
+    </div>
 
 </body>
 
