finsihed last bits

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
@@ -21,7 +22,7 @@
     <h1>Want to reach me? Here's how!</h1>
 
     <div class="grid-container">
-        <div class="item1"><img src="images/me.jpg" alt=""></div>
+        <div class="item1"><img src="images/eagul1.png" alt=""></div>
         <div class="item2">
 
             <p><a href="https://www.linkedin.com/in/emilie-eagle-jakobsen/" target="_blank">
