--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
@@ -18,10 +19,14 @@
         </ul>
     </nav>
 
-    <h1>Welcome to Eagle's nest!</h1>
+    <h1>Hi! I'm Emilie, also known as Emi / Eagle &#127793;</h1>
     <div class="about">
         <img class="me" src="images/me.jpg" alt="picture of me">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sed. Et magni quaerat sequi dolore libero mollitia tempora architecto commodi sit praesentium ex adipisci minus ducimus, velit at eius voluptate? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim doloremque corporis est quam repellendus nostrum modi quia temporibus! Provident tempora exercitationem nisi ab sequi voluptatum minus hic officia. A, quia? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat molestias cupiditate ullam! Nostrum dolor temporibus suscipit! Delectus, esse at ea omnis ipsa minus cum ullam. Deleniti sed officia voluptates laboriosam!</p>
+        <p>As mentioned above, my name is Emilie or Emi for short. <br><br>
+            Originally I am from Denmark but in 2008 my family and I moved to Sweden and I'm currently studying at Blekinge Institute of Technology. <br><br>
+            I have a huge interest in UI/UX design, 3D art, drawing and gaming! It's safe to say I spend most of my time in front of my pc or phone screen either playing games or looking for new projects to start or just what the best grid is for websites in figma! <br>
+            <b>This is a little page about me, thank you for checking it out!</b>
+         </p>
     </div>
 </body>
 
