--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
@@ -17,9 +18,41 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
+    <div class="top-info">
+        <h1>Here are some of my projects</h1>
+        <p>This page is for some of the projects I've been working on and continue to work on over time! Thank you for
+            checking them out!</p>
+    </div>
 
-    <h1>Welcome to Eagle's nest!</h1>
-    <p>This is a paragraph.</p>
+    <div class="proj-container">
+        <div class="proj-item"><a href="https://github.com/emidoescoding/AssignOne" target="_blank"><img
+                    src="images/thispage.jpg"></a>
+            <h3>this page</h3>
+            <p>This page is the first assignment for webproduction! It links to the github repo I made for it. Simple
+                but good repetetion of VSC and github.</p>
+        </div>
+
+        <div class="proj-item"><a href="https://eagul.dev/" target="_blank"><img src="images/personalweb.jpg"></a>
+            <h3>my personal website</h3>
+            <p>My personal website I made a few years back. It is yet to be responsive and does not have much
+                information but it is a good start and hopefully as school continues I'll be able to apply new knowledge
+                to the website!</p>
+        </div>
+
+        <div class="proj-item"><a href="https://www.artstation.com/eaguul" target="_blank"><img
+                    src="images/keyboardthingy banner.png"></a>
+            <h3>artstation and blender</h3>
+            <p>While learning 3D in Blender I have been uploading some of my projects to Artstation. These are all
+                personal projects done in my freetime.</p>
+        </div>
+
+        <div class="proj-item"><a href="" target="_blank"><img src="images/TBD.jpg"></a>
+            <h3>& more coming soon!</h3>
+            <p>This page will be updated with more projects as time passes! Thank you for your interest and I hope you
+                enjoy my small collection so far!</p>
+        </div>
+
+    </div>
 
 </body>
 
