--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div class="about">
         <img class="me" src="images/me.jpg" alt="picture of me">
         <p>As mentioned above, my name is Emilie or Emi for short. <br><br>
-            Originally I am from Denmark but in 2008 my family and I moved to Sweden and I'm currently studying at Blekinge Institute of Technology. <br><br>
-            I have a huge interest in UI/UX design, 3D art, drawing and gaming! It's safe to say I spend most of my time in front of my pc or phone screen either playing games or looking for new projects to start or just what the best grid is for websites in figma! <br>
+            Originally I am from Denmark but in 2008 my family and I moved to Sweden. I'm currently studying at Blekinge Institute of Technology. <br><br>
+            I have a huge interest in UI/UX design, 3D art, drawing and gaming! It's safe to say I spend most of my time in front of my pc or phone screen either playing games or looking for new projects to start or just what the best grid is for websites in figma! <br><br>
             <b>This is a little page about me, thank you for checking it out!</b>
          </p>
     </div>
